# WarpEngine

./: .gitattributes  .gitignore  Base.hpp  CMakeLists.txt  Engine-Graphics-Buffer.cpp  Engine-Graphics-Image.cpp  Engine-Graphics-Memory.cpp  Engine-Graphics-Queue.cpp  Engine-Graphics-Swapchain.cpp  Engine-Graphics.cpp  Engine-Graphics.ixx  Engine-System.cpp  Engine-System.hpp  Engine-System.ixx  Engine.cpp  Engine.ixx  Graphics.cpp  Graphics.hpp  Makefile  README  README.md  System.cpp  System.hpp  Zero.cpp  ZeroClient.sln  ZeroClient.vcxproj  ZeroClient.vcxproj.filters  base.c  base.h  config.txt  content.c  content.h  contentManager.c  contentManager.h  game.h  gameLogic.h  graphics.c  graphics.h  main.c  main.cpp  (+23 more)
Engine/: Engine.cpp  Engine.hpp
Engine/Graphics/: Buffer.cpp  Core.cpp  Device.cpp  Graphics.cpp  Graphics.hpp  Graphics.ixx  Image.cpp  Memory.cpp  Pipeline.cpp  Swapchain.cpp
Engine/System/: System.cpp  System.hpp  System.ixx
Graphics/: Core.cpp  Device.cpp  Graphics.cpp  Graphics.hpp  Graphics.ixx  Memory.cpp  Pipeline.cpp  Queue.cpp
Shaders/: fragment.frag  vertex.vert
Source/Engine/: Engine.hpp
Source/Engine/Graphics/: Content.cpp  Core.cpp  Device.cpp  Graphics.hpp  Memory.cpp  Pipeline.cpp  Swapchain.cpp
Source/Engine/Manager/: Manager.cpp  Manager.hpp
Source/Engine/System/: System.cpp  System.hpp
System/: System.cpp
archive/Engine/Manager/: Manager.cpp
archive/v1/Engine/Graphics/: Memory.cpp
archive/v2/include/: Framebuffer.hpp  Swapchain.hpp  Zero.hpp
archive/v2/src/: Renderer.cpp  Swapchain.cpp
archive/v3/include/Graphics/: Device.hpp  Graphics.hpp  Swapchain.hpp
archive/v3/include/System/: System.hpp
archive/v3/src/: Main.cpp
archive/v3/src/Graphics/: Device.cpp
archive/v3/src/System/: Window.cpp
assets/: Skybox.blend  Skybox.blend1  Skybox.gltf
data/: Skin.ktx2  Skybox.gltf  Suzanne.gltf  config.txt
data/assets/default/textures/: black.ktx2  white.ktx2
data/assets/main_sponza/: NewSponza_Main_glTF_003.gltf  credits_license.txt
data/assets/main_sponza/textures/: arch_stone_wall_01_BaseColor.ktx2  arch_stone_wall_01_Normal.ktx2  arch_stone_wall_01_Roughnessarch_stone_wall_01_Metalness.ktx2  brickwall_01_BaseColor.ktx2  brickwall_01_MetallicRoughness.ktx2  brickwall_01_Normal.ktx2  brickwall_02_BaseColor.ktx2  brickwall_02_MetallicRoughness.ktx2  brickwall_02_Normal.ktx2  ceiling_plaster_01_BaseColor.ktx2  ceiling_plaster_01_MetallicRoughness.ktx2  ceiling_plaster_01_Normal.ktx2  ceiling_plaster_02_BaseColor.ktx2  ceiling_plaster_02_Normal.ktx2  ceiling_plaster_02_Roughnessceiling_plaster_01_Metalness.ktx2  col_1stfloor_BaseColor.ktx2  col_1stfloor_Normal.ktx2  col_1stfloor_Roughnesscol_1stfloor_Metalness.ktx2  col_brickwall_01_BaseColor.ktx2  col_brickwall_01_MetallicRoughness.ktx2  col_brickwall_01_Normal.ktx2  col_head_1stfloor_BaseColor.ktx2  col_head_1stfloor_Normal.ktx2  col_head_1stfloor_Roughnesscol_head_1stfloor_Metalness.ktx2  col_head_2ndfloor_02_BaseColor.ktx2  col_head_2ndfloor_02_Normal.ktx2  col_head_2ndfloor_02_Roughnesscol_head_2ndfloor_02_Metalness.ktx2  col_head_2ndfloor_03_BaseColor.ktx2  col_head_2ndfloor_03_MetallicRoughness.ktx2  col_head_2ndfloor_03_Normal.ktx2  dirt_decal_01_Opacity.ktx2  door_stoneframe_01_BaseColor.ktx2  door_stoneframe_01_Normal.ktx2  door_stoneframe_02_BaseColor.ktx2  (+39 more)
data/assets/skybox/: Skybox.gltf
data/shaders/: fragment.frag  vertex.vert
game/: base.hpp  game.cpp  game.hpp
graphics/: base.hpp  details.cpp  details.hpp  device.cpp  device.hpp  graphics.cpp  graphics.hpp  header.hpp  instance.cpp  instance.hpp  internals.cpp  internals.hpp  renderer.cpp  renderer.hpp  surface.cpp  surface.hpp
include/: Core.hpp  Graphics.hpp  Main.hpp  System.hpp  asset.h  buffer.h  camera.h  config.h  content.h  control.h  data.h  descriptor.h  device.h  draw.h  element.h  engine.h  file.h  framebuffer.h  graphics.h  helper.h  image.h  instance.h  light.h  main.h  manager.h  material.h  memory.h  meta.h  network.h  numerics.h  pch.h  physicalDevice.h  pipeline.h  primitive.h  queue.h  render.h  scene.h  shader.h  surface.h  swapchain.h  (+5 more)
include/Graphics/: Buffer.hpp  Device.hpp  DeviceInfo.hpp  Framebuffer.hpp  Graphics.hpp  Image.hpp  Instance.hpp  Memory.hpp  Queue.hpp  Renderer.hpp  Surface.hpp  Swapchain.hpp
include/System/: System.hpp  Window.hpp
include/Window/: Window.hpp
network/: base.hpp  network.cpp  network.hpp  server.cpp  server.hpp
shaders/: fragment.frag  fragment_fixed.frag  shader.frag.spv  shader.vert  shader.vert.spv  skybox.vert  vertex.vert  vertex_fixed.vert
source/: contentManager.h  gameLogic.h  networkSystem.h  platformBase.c  platformBase.h  renderSystem.c  renderSystem.h  renderSystemBuffer.c  renderSystemBuffer.h  renderSystemCore.c  renderSystemCore.h  renderSystemDevice.c  renderSystemDevice.h  renderSystemImage.c  renderSystemImage.h  renderSystemMemory.h  renderSystemSwapchain.h
src/: Core.cpp  Engine.cpp  Graphics.cpp  Helper.cpp  Main.cpp  Zero.cpp  asset.c  buffer.c  camera.c  config.c  content.c  control.c  data.c  descriptor.c  device.c  draw.c  element.c  engine.c  file.c  framebuffer.c  graphics.c  helper.c  image.c  implementation.c  instance.c  light.c  main.c  manager.c  material.c  memory.c  meta.c  network.c  numerics.c  physicalDevice.c  pipeline.c  primitive.c  queue.c  render.c  scene.c  shader.c  (+7 more)
src-temp/Migration/include/: Image.hpp  Renderer.hpp
src-temp/Migration/src/: Helper.cpp
src-temp/v2/include/: Buffer.hpp  Graphics.hpp
src-temp/v2/src/: Buffer.cpp  Memory.cpp
src/Graphics/: Buffer.cpp  Device.cpp  DeviceInfo.cpp  Framebuffer.cpp  Graphics.cpp  Helper.cpp  Image.cpp  Instance.cpp  Memory.cpp  Queue.cpp  Renderer.cpp  Surface.cpp  Swapchain.cpp
src/System/: System.cpp  Window.cpp
src/Window/: Window.cpp
system/: base.hpp  header.hpp  system.cpp  system.hpp  window.cpp  window.hpp
tools/: compressTextures.sh  convertImageToTexture.sh
(+5 files in other folders)
